--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ iced = { version = "0.3", features = ["canvas", "debug", "image", "svg", "tokio"
 iced_native = { version = "0.4", features = ["debug"] }
 iced_wgpu = { version = "0.4", features = ["image", "svg"] }
 parking_lot = "0.11"
-pyo3 = { version = "0.14", features = ["extension-module", "abi3-py36"] }
+pyo3 = { version = "0.14", features = ["extension-module", "abi3"] }
 pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
 tokio = { version = "1", default-features = false, features = ["parking_lot", "rt-multi-thread"] }
 
