--- a/.github/workflows/build_linux_wheels.yml
+++ b/.github/workflows/build_linux_wheels.yml
@@ -35,12 +35,6 @@ jobs:
         with:
           python-version: ${{ github.event.inputs.python }}
 
-      - name: install libs
-        run: |
-          export DEBIAN_FRONTED=noninteractive
-          sudo apt-get -q update
-          sudo apt-get -q install -y rustc cargo libxkbcommon-dev libfreetype-dev
-
       - name: Install requirements
         run: |
           python -m pip install -U pip wheel setuptools
@@ -49,19 +43,19 @@ jobs:
       - name: Build wheels
         run: python -m cibuildwheel --output-dir wheelhouse
         env:
-#          CIBW_SKIP: "cp27-* pp27-* pp30-* pp31-* pp32-* pp33-* pp34-* pp35-* pp35-*"
-          CIBW_BUILD: cp36-*
+          CIBW_BUILD: "cp39-*"
           CIBW_MANYLINUX_X86_64_IMAGE: ${{ github.event.inputs.manylinux }}
           CIBW_MANYLINUX_I686_IMAGE: ${{ github.event.inputs.manylinux }}
           CIBW_ARCHS: ${{ github.event.inputs.archs }}
           CIBW_BEFORE_BUILD: |
-            curl --proto '=https' --tlsv1.2 -sSf -o /tmp/rustup-init.sh https://sh.rustup.rs
+            curl -sSf -o /tmp/rustup-init.sh https://sh.rustup.rs
             sh /tmp/rustup-init.sh -y
           CIBW_ENVIRONMENT: PATH=$HOME/.cargo/bin:$PATH
           CIBW_BEFORE_ALL_LINUX: yum install -y freetype-devel libxkbcommon-devel
 
       - name: Store artifacts
         uses: actions/upload-artifact@v2
+        if: always()
         with:
           name: Wheelhouse
           path: ./wheelhouse/*.whl
