--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,12 +9,12 @@ futures-util = "0.3"
 iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "wgpu", "svg", "tokio"] }
 iced_native = { version = "0.4", features = ["debug"] }
 iced_wgpu = { version = "0.4", features = ["image", "svg"] }
-parking_lot = { version = "0.11", features = ["arc_lock"] }
-pyo3 = { version = "0.14", features = ["extension-module", "abi3"] }
-pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
-self_cell = "0.9"
-tokio = { version = "1", default-features = false, features = ["parking_lot", "rt-multi-thread"] }
 ouroboros = "0.13"
+parking_lot = { version = "0.11", features = ["arc_lock"] }
+pyo3 = { version = "0.14", features = ["extension-module", "abi3", "serde"] }
+pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
+serde = { version = "1", features = ["derive"] }
+tokio = { version = "1", default-features = false, features = ["parking_lot", "rt-multi-thread"] }
 
 [lib]
 name = "pyiced"
