--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
-authors = ["Messense Lv <messense@icloud.com>"]
 name = "pyiced"
-version = "0.1.0"
 edition = "2021"
+license = "MIT"
+
+# KEEP SYNCHRONOUS TO SETUP.PY
+authors = ["René Kijewski <rene.[SURNAME]@fu-berlin.de>"]
+homepage = "https://github.com/Kijewski/pyiced"
+# KEEP SYNCHRONOUS TO ICED {major.minor} WITH INCREASING PATCH LEVEL
+version = "0.3.0"
 
 [dependencies]
 futures-util = "0.3"
@@ -11,22 +16,16 @@ iced_native = { version = "0.4", features = ["debug"] }
 iced_wgpu = { version = "0.4", features = ["image", "svg"] }
 ouroboros = "0.13"
 parking_lot = { version = "0.11", features = ["arc_lock"] }
-pyo3 = { version = "0.14", features = ["extension-module", "abi3", "serde"] }
+pyo3 = { version = "0.14", default-features = false, features = ["extension-module", "abi3", "abi3-py36"] }
 pyo3-asyncio = { version = "0.14", features = ["attributes", "tokio-runtime"] }
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", default-features = false, features = ["parking_lot", "rt-multi-thread"] }
+tokio = { version = "1", default-features = false, features = ["parking_lot"] }
 
 [lib]
 name = "pyiced"
 crate-type = ["cdylib"]
 
-[profile.dev]
-split-debuginfo = "unpacked"
-debug = 2
-
 [profile.release]
-debug = 0
 opt-level = "s"
 lto = "thin"
 codegen-units = 1
-split-debuginfo = "unpacked"
