--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,4 +1,4 @@
 cibuildwheel == 2.*, >= 2.1.3
 setuptools >= 41.0.0
 wheel
-setuptools_rust == 0.10.*, >= 0.10.2
+setuptools-rust == 0.12.*, >= 0.12.1
