--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,7 @@
 [metadata]
 name = pyiced
-
 long_description = file: README.md
 long_description_content_type = text/markdown
-
 classifiers =
     Development Status :: 2 - Pre-Alpha
     License :: OSI Approved :: MIT
@@ -22,7 +20,9 @@ license = MIT
 
 [options]
 packages = pyiced
+package_dir =
+    = src
 zip_safe = False
+include_package_data = True
 setup_requires = setuptools-rust >= 0.12.1
 python_requires = >=3.6
-include_package_data = True
