--- a/setup.cfg
+++ b/setup.cfg
@@ -17,6 +17,7 @@ author = René Kijewski
 author_email = rene.[SURNAME]@fu-berlin.de
 url = https://github.com/Kijewski/pyiced
 license = MIT
+license_files = LICENSE.md
 
 [options]
 packages = pyiced
