--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include Cargo.toml pyproject.toml requirements-dev.txt requirements.readthedocs.txt rustfmt.toml
+include Cargo.toml pyproject.toml requirements*.txt rustfmt.toml
 recursive-include docs *
 recursive-include src *
