--- a/requirements.readthedocs.txt
+++ b/requirements.readthedocs.txt
@@ -1,5 +1,4 @@
 pyiced == 0.3.0
 
 sphinx == 4.*, >= 4.2.0
-sphinx_autodoc_typehints == 1.12.*, >= 1.12.0
-cloud-sptheme = 1.*, >= 1.10.1.post20200504175005
+cloud-sptheme == 1.*, >= 1.10.1.post20200504175005
