--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,14 +20,18 @@ crate-type = ["cdylib"]
 
 [dependencies]
 futures-util = "0.3"
-iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "wgpu", "svg", "tokio"] }
+iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
 iced_native = { version = "0.4", features = ["debug"] }
-iced_wgpu = { version = "0.4", features = ["image", "svg"] }
+iced_wgpu = { version = "0.4", features = ["image", "svg"], optional = true }
 mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
 ouroboros = "0.13"
 parking_lot = { version = "0.11", features = ["arc_lock"] }
 pyo3 = { version = "0.14", default-features = false, features = ["abi3", "abi3-py37", "extension-module", "macros"] }
 tokio = { version = "1", default-features = false, features = ["parking_lot", "sync"] }
+
+[features]
+default = ["wgpu"]
+wgpu = ["iced_wgpu", "iced/wgpu"]
 
 [profile.release]
 opt-level = "s"
