--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,8 +26,11 @@ iced_wgpu = { version = "0.4", features = ["image", "svg"], optional = true }
 mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
 ouroboros = "0.13"
 parking_lot = { version = "0.11", features = ["arc_lock"] }
-pyo3 = { version = "0.14", default-features = false, features = ["abi3", "abi3-py37", "extension-module", "macros"] }
+pyo3 = { version = "0.14", default-features = false, features = ["extension-module", "macros"] }  # "abi3", "abi3-py37"
 tokio = { version = "1", default-features = false, features = ["parking_lot", "sync"] }
+
+[build-dependencies]
+pyo3-build-config = "0.14"
 
 [features]
 default = ["wgpu"]
