--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,15 +22,15 @@ crate-type = ["cdylib"]
 futures-util = "0.3"
 iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
 iced_native = { version = "0.4", features = ["debug"] }
-iced_wgpu = { version = "0.4", features = ["image", "svg"], optional = true }
+iced_wgpu = { version = "0.4", optional = true }
 mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
 ouroboros = "0.13"
 parking_lot = { version = "0.11", features = ["arc_lock"] }
-pyo3 = { version = "0.14", default-features = false, features = ["extension-module", "macros"] }  # "abi3", "abi3-py37"
+pyo3 = { version = "0.15", default-features = false, features = ["extension-module", "macros"] }  # "abi3", "abi3-py37"
 tokio = { version = "1", default-features = false, features = ["parking_lot", "sync"] }
 
 [build-dependencies]
-pyo3-build-config = "0.14"
+pyo3-build-config = "0.15"
 
 [features]
 default = ["wgpu"]
