--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
 
       - uses: actions-rs/cargo@v1
@@ -32,7 +32,7 @@ jobs:
         with:
           command: test
 
-  lint:
+  fmt:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -40,16 +40,34 @@ jobs:
       - name: Cache
         uses: actions/cache@v2
         with:
-          key: cache-lint
+          key: cache-fmt
           path: target
 
       - uses: actions-rs/toolchain@v1
         with:
           profile: minimal
-          toolchain: stable
+          toolchain: nightly
           override: true
-          components: rustfmt, clippy
+          components: rustfmt
 
       - run: cargo fmt --all -- --check
+
+  clippy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: cache-clippy
+          path: target
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+          components: clippy
 
       - run: cargo clippy --all-targets -- -D warnings
