--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,2 +1,6 @@
 [build-system]
-requires = ["setuptools>=41.0.0", "wheel", "setuptools_rust>=0.10.2"]
+requires = [
+    "setuptools>=41.0.0",
+    "wheel",
+    "setuptools_rust>=1.*",
+]
