--- a/requirements-readthedocs.txt
+++ b/requirements-readthedocs.txt
@@ -2,7 +2,8 @@
 pyiced == 0.3.0
 
 # keep synchronous to requirements-dev.txt
-cloud-sptheme == 1.*, >= 1.10.1.post20200504175005
-sphinx == 4.*, >= 4.2.0
-sphinxprettysearchresults == 0.*, >= 0.3.5
-
+cloud-sptheme == 1.*
+myst-parser == 0.15.*
+sphinx == 4.*
+sphinx_autodoc_typehints == 1.*
+sphinxprettysearchresults == 0.3.*
