--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,11 @@
-cibuildwheel == 2.*, >= 2.1.3
-setuptools >= 41.0.0
-setuptools-rust == 0.12.*, >= 0.12.1
+cibuildwheel == 2.*
+setuptools
+setuptools-rust == 1.*
 wheel
 
 # keep synchronous to requirements-readthedocs.txt
-cloud-sptheme == 1.*, >= 1.10.1.post20200504175005
-sphinx == 4.*, >= 4.2.0
-sphinxprettysearchresults == 0.*, >= 0.3.5
+cloud-sptheme == 1.*
+myst-parser == 0.15.*
+sphinx == 4.*
+sphinx_autodoc_typehints == 1.*
+sphinxprettysearchresults == 0.3.*
