--- a/setup.cfg
+++ b/setup.cfg
@@ -25,5 +25,5 @@ package_dir =
     = src
 zip_safe = False
 include_package_data = True
-setup_requires = setuptools-rust >= 0.12.1
+setup_requires = setuptools-rust == 1.*
 python_requires = >= 3.7
