--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -50,3 +50,24 @@ jobs:
           components: clippy
 
       - run: cargo clippy --all-targets -- -D warnings
+
+  check:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Cache
+        uses: actions/cache@v2
+        with:
+          key: cache-check
+          path: target
+
+      - name: Install cargo
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          override: true
+
+      - run: cargo check
