--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,10 +1,10 @@
 name: Python
 
-on:
-  push:
-    branches: ['main']
-  pull_request:
-    branches: ['main']
+# on:
+#   push:
+#     branches: ['main']
+#   pull_request:
+#     branches: ['main']
 
 jobs:
   install:
