--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ author = René Kijewski
 author_email = rene.[SURNAME]@fu-berlin.de
 url = https://github.com/Kijewski/pyiced
 license = MIT
-license_files = LICENSE.md
+license_files = LICENSES/MIT.txt
 
 [options]
 packages = pyiced
