--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,12 @@
 [metadata]
+version = 0.3.0a1
+
 name = pyiced
+author = René Kijewski
+author_email = pypi.org@k6i.de
+url = https://github.com/Kijewski/pyiced
+license = MIT
+license_files = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
@@ -10,14 +17,6 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Rust
     Topic :: Games/Entertainment
-
-# KEEP SYNCHRONOUS TO CARGO.TOML
-version = 0.3.0
-author = René Kijewski
-author_email = rene.[SURNAME]@fu-berlin.de
-url = https://github.com/Kijewski/pyiced
-license = MIT
-license_files = LICENSES/MIT.txt
 
 [options]
 packages = pyiced
