--- a/requirements-readthedocs.txt
+++ b/requirements-readthedocs.txt
@@ -1,5 +1,5 @@
 # keep synchronous to Cargo.toml
-pyiced == 0.3.0
+pyiced == 0.3.0a1
 
 # keep synchronous to requirements-dev.txt
 cloud-sptheme == 1.*
