--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [metadata]
+# keep synchronous to Cargo.toml
 version = 0.3.0a1
 
 name = pyiced
@@ -10,11 +11,16 @@ license_files = LICENSE
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
-    Development Status :: 2 - Pre-Alpha
-    License :: OSI Approved :: MIT
+    Development Status :: 3 - Alpha
+    License :: OSI Approved :: MIT License
     Operating System :: POSIX :: Linux
     Operating System :: Microsoft :: Windows
     Programming Language :: Python :: 3
+    Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
     Programming Language :: Rust
     Topic :: Games/Entertainment
 
