Add radio & rule examples

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@
 version = 0.3.0a2
 
 name = pyiced
+description = Bindings for Iced, a cross-platform GUI library focused on simplicity. Inspired by Elm.
 author = René Kijewski
 author_email = pypi.org@k6i.de
 url = https://github.com/Kijewski/pyiced
@@ -23,6 +24,7 @@ classifiers =
     Programming Language :: Python :: 3.10
     Programming Language :: Rust
     Topic :: Games/Entertainment
+    Topic :: Software Development :: User Interfaces
 
 [options]
 packages = pyiced
@@ -31,4 +33,4 @@ package_dir =
 zip_safe = False
 include_package_data = True
 setup_requires = setuptools-rust == 1.*
-python_requires = >= 3.7
+python_requires = >= 3.7, < 4
