Load system fonts

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,11 @@ name = "_pyiced"
 crate-type = ["cdylib"]
 
 [dependencies]
+fontdb = { version = "0.7", default-features = false, optional = true, features = ["fs", "memmap"] }
 futures-util = "0.3"
 iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
-iced_native = { version = "0.4", features = ["debug"] }
-iced_wgpu = { version = "0.4", optional = true }
+iced_native = { version = "0.4", default-features = false, features = ["debug"] }
+iced_wgpu = { version = "0.4", default-features = false, optional = true }
 mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
 ouroboros = "0.14"
 parking_lot = { version = "0.11", features = ["arc_lock"] }
@@ -35,7 +36,8 @@ tokio = { version = "1", default-features = false, features = ["parking_lot", "s
 pyo3-build-config = "0.15"
 
 [features]
-default = ["wgpu"]
+default = ["wgpu", "fontdb-integration"]
+fontdb-integration = ["fontdb"]
 wgpu = ["iced_wgpu", "iced/wgpu"]
 
 [profile.release]
