--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,17 +21,6 @@ jobs:
           override: true
           components: rustfmt
 
-      - name: Cache
-        uses: actions/cache@v2
-        with:
-          key: ${{ runner.os }}-fmt-${{ hashFiles('Cargo.lock') }}
-          restore-keys: ${{ runner.os }}-fmt-
-          path: |
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-
       - run: cargo fmt --all -- --check
 
   clippy:
@@ -128,3 +117,23 @@ jobs:
 
       - name: Install library
         run: python -m pip install .
+
+  flake8:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: Install requirements
+        run: python -m pip install -U flake8
+
+      - name: Check src
+        run: python -m flake8 --config ./src/.flake8 ./src/
+
+      - name: Check examples
+        run: python -m flake8 --config ./examples/.flake8 ./examples/
