--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,3 +140,20 @@ jobs:
 
       - name: Check examples
         run: python -m flake8 --config ./examples/.flake8 ./examples/
+
+  reuse:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.10'
+
+      - name: Install requirements
+        run: python -m pip install -U reuse
+
+      - name: Lint
+        run: python -m reuse lint
