--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,20 +21,21 @@ name = "_pyiced"
 crate-type = ["cdylib"]
 
 [dependencies]
-fontdb = { version = "0.8", default-features = false, optional = true, features = ["fs", "memmap"] }
-futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
-iced = { version = "0.3", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
-iced_native = { version = "0.4", default-features = false, features = ["debug"] }
-iced_wgpu = { version = "0.4", default-features = false, optional = true }
-image = { version = "0.24", default-features = false, features = ["ico"] }
-mimalloc = { version = "0.1", features = ["secure", "local_dynamic_tls"] }
-ouroboros = "0.14"
-parking_lot = { version = "0.12", features = ["arc_lock"] }
-pyo3 = { version = "0.15", default-features = false, features = ["extension-module", "macros", "multiple-pymethods"] }
-tokio = { version = "1", default-features = false, features = ["parking_lot", "sync"] }
+iced = { version = "=0.3.0", default-features = false, features = ["canvas", "debug", "image", "svg", "tokio"] }
+iced_native = { version = "=0.4.0", default-features = false, features = ["debug"] }
+iced_wgpu = { version = "=0.4.0", default-features = false, optional = true }
+
+fontdb = { version = "0.8.0", default-features = false, optional = true, features = ["fs", "memmap"] }
+futures-util = { version = "0.3.21", default-features = false, features = ["alloc"] }
+image = { version = "0.24.0", default-features = false, features = ["ico"] }
+mimalloc = { version = "0.1.27", features = ["secure", "local_dynamic_tls"] }
+ouroboros = "0.14.2"
+parking_lot = { version = "0.12.0", features = ["arc_lock"] }
+pyo3 = { version = "0.15.1", default-features = false, features = ["extension-module", "macros", "multiple-pymethods"] }
+tokio = { version = "1.16.1", default-features = false, features = ["parking_lot", "sync"] }
 
 [build-dependencies]
-pyo3-build-config = "0.15"
+pyo3-build-config = "0.15.1"
 
 [features]
 default = ["wgpu", "fontdb"]
