--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 requires = [
-    "setuptools>=41.0.0",
-    "wheel",
-    "setuptools_rust>=1.*",
+    "setuptools >= 60.9.3",
+    "wheel == 0.*, >= 0.37.1",
+    "setuptools_rust == 1.*, >= 1.1.2",
 ]
