--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,19 @@
 [metadata]
 # keep synchronous to Cargo.toml
-version = 0.3.0a6
+version = 0.3.0a7
 
 name = pyiced
 description = Bindings for Iced, a cross-platform GUI library focused on simplicity. Inspired by Elm.
 author = René Kijewski
 author_email = pypi.org@k6i.de
 url = https://github.com/Kijewski/pyiced
-license = MIT
-license_files = LICENSE
+license = Apache License 2.0
+license_files = LICENSE.md
 long_description = file: README.md
 long_description_content_type = text/markdown
 classifiers =
     Development Status :: 3 - Alpha
-    License :: OSI Approved :: MIT License
+    License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Operating System :: Microsoft :: Windows
     Programming Language :: Python :: 3
